Leak: WebNotificationPrivate ObjC leaks seen on leaks bot https://bugs.webkit.org/show_bug.cgi?id=136972

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-09-21
Reviewed by Darin Adler.

* WebView/WebNotification.h:
* WebView/WebNotification.mm:
(-[WebNotification initWithCoreNotification:notificationID:]):
Switch to RetainPtr and adopt into _private to ensure when we are
deallocated that _private will get deallocated.

Canonical link: https://commits.webkit.org/154798@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173802 268f45cc-cd09-0410-ab3c-d52691b4dbfc